crates/voice-derive/tests/compile_fail/wrong_type.stderr
error: voice_param fields must be f64
 --> tests/compile_fail/wrong_type.rs:6:8
  |
6 |     a: f32,
  |        ^^^
